# ztrackerprime

./: CMakeLists.txt  zt.conf  zt.icns
.github/workflows/: build.yml
doc/: CHANGELOG.txt  help.txt
palettes/: camouflage.conf  gold.conf  light_blue.conf  midnight_tracking.conf  pine_colours.conf  soundtracker.conf  volcanic.conf
scripts/: zt-screenshot.sh
src/: CUI_About.cpp  CUI_Arpeggioeditor.cpp  CUI_Config.cpp  CUI_Help.cpp  CUI_InstEditor.cpp  CUI_Loadscreen.cpp  CUI_Midimacroeditor.cpp  CUI_PEParms.cpp  CUI_Page.h  CUI_PaletteEditor.cpp  CUI_PaletteEditor.h  CUI_Patterneditor.cpp  CUI_Playsong.cpp  CUI_Savescreen.cpp  CUI_SongMessage.cpp  CUI_Songconfig.cpp  CUI_Sysconfig.cpp  PatternDisplay.cpp  Skins.h  conf.cpp  conf.h  font.cpp  main.cpp  skins.cpp  zt.h
